tdf#163191 Fix crash when dragging headings in Writer navigator

by keeping track of the selected entry positions in SwOutlineNodes
instead of iterators in the content tree.

Change-Id: Iad0a477d6e3b25a1d602e3f827f2590c441eb236
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174912
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
Tested-by: Jenkins